Update EDA on Olympic Games.ipynb

--- a/EDA on Olympic Games.ipynb
+++ b/EDA on Olympic Games.ipynb
@@ -47,10 +47,10 @@
    "source": [
     "# Load Required Data:\n",
     "\n",
-    "summer = pd.read_csv(\"C:/Users/amitm/Desktop/New folder/Task Impetus/Class/Python/Case Study/Olympics/summer.csv\") \n",
-    "winter = pd.read_csv(\"C:/Users/amitm/Desktop/New folder/Task Impetus/Class/Python/Case Study/Olympics/winter.csv\")\n",
-    "track = pd.read_csv(\"C:/Users/amitm/Desktop/New folder/Task Impetus/Class/Python/Case Study\\Olympics/data.csv\")\n",
-    "countries = pd.read_csv(\"C:/Users/amitm/Desktop/New folder/Task Impetus/Class/Python/Case Study/Olympics/dictionary.csv\")"
+    "summer = pd.read_csv(\"Olympics\\summer.csv\") \n",
+    "winter = pd.read_csv(\"Olympics\\winter.csv\")\n",
+    "track = pd.read_csv(\"Olympics\\data.csv\")\n",
+    "countries = pd.read_csv(\"Olympics\\dictionary.csv\")"
    ]
   },
   {
